Improve validation for file manager
* Add file name length validation to api routes.

* Add file name sanitization to api routes.

* Add Max upload size via `MAX_CONTENT_LENGTH` in app/__init__.py

* Update swagger docs spec with new api file routes.
